gl51-master/src/test/deca/context/invalid/testObject_rule3_28bis.deca
//Description
//autre assignation incompatible

class A {}
class B {}
{
    A a = new A();
    float b = a; //error
}
//passed
